  LocalisationCache or MessageCache as appropriate.
* VirtualRESTService class is deprecated in 1.41 and as a replacement
  we can use MultiHttpClient.
* MediaWikiServices::getConfiguredReadOnlyMode() is deprecated. Use
  ::getReadOnlyMode() instead. ReadOnlyMode::getConfiguredReason()
  and ::isConfiguredReadOnly() has been added to support that.
* JobSpecification::toSerializableArray() now emits deprecation warnings.
* The following skin methods were deprecated:
  - Skin::makeSpecialUrl (use Title or Special class instead)
  - Skin::makeSpecialUrlSubpage (use Title or Special class instead)
* mw.jqueryMsg.parser, deprecated in 1.31, now emits deprecation warnings.
* ResourceLoader (T127268): The targets system is deprecated. Modules that
  have been marked as desktop or mobile only are no longer supported and
  will send deprecation warnings.
* TextSlotDiffRenderer::setLanguage() is deprecated, and calling it will
  have no effect. Use ContentHandler::getSlotDiffRenderer(), or in subclasses,
  ContentHandler::createTextSlotDiffRenderer(), to correctly inject
  dependencies into TextSlotDiffRenderer.
* The static methods encodeJsVar() and encodeJsCall() have been moved from the
  Xml class to the more appropriate MediaWiki\Html\Html one, and the old ones
  are now deprecated.
* Some work to rename classes was done in previous releases, but the renaming
  was not noted at the time. The old aliases work for now but are deprecated;
  this is now explicitly noted:
  From 1.40:
  - Category -> MediaWiki\Category\Category
  - CategoriesRdf -> MediaWiki\Category\CategoriesRdf
  - CategoryViewer -> MediaWiki\Category\CategoryViewer
  - TrackingCategories -> MediaWiki\Category\TrackingCategories
  - CommentStore -> MediaWiki\CommentStore\CommentStore
  - CommentStoreComment -> MediaWiki\CommentStore\CommentStoreComment
  - EditPage -> MediaWiki\EditPage\EditPage
  - TemplatesOnThisPageFormatter
    -> MediaWiki\EditPage\TemplatesOnThisPageFormatter