@@ -163,11 +163,6 @@ class ApiUpload extends ApiBase {
 			return $this->getStashResult( $warnings );
 		}
 
-		// Check throttle after we've handled warnings
-		if ( UploadBase::isThrottled( $this->getUser() ) ) {
-			$this->dieWithError( 'apierror-ratelimited' );
-		}
-
 		// This is the most common case -- a normal upload with no warnings
 		// performUpload will return a formatted properly for the API with status
 		return $this->performUpload( $warnings );
