@@ -545,14 +545,6 @@ class SpecialUpload extends SpecialPage {
 			}
 		}
 
-		// This is as late as we can throttle, after expected issues have been handled
-		if ( UploadBase::isThrottled( $user ) ) {
-			$this->showRecoverableUploadError(
-				$this->msg( 'actionthrottledtext' )->escaped()
-			);
-			return;
-		}
-
 		// Get the page text if this is not a reupload
 		if ( !$this->mForReUpload ) {
 			$pageText = self::getInitialPageText( $this->mComment, $this->mLicense,
